crates/validation/tests/validation_errors/unions_nonempty.errors.txt
  × Syntax error:  --> 2:1
  │   |
  │ 2 |
  │   | ^---
  │   |
  │   = expected name
